# opengl_glfw_template

./: CMakeLists.txt  README.md
.cache/clangd/index/: context.c.C18A3CD804EFA285.idx  egl_context.c.3101F21039497BCC.idx  glfw3.h.A0A0FF318780B844.idx  glfw3.h.E72F906A9B2D2BA0.idx  glfw3native.h.DA280C8D90701A84.idx  glx_context.c.12228E34D35F7D03.idx  init.c.8B843A27A05A6CF1.idx  input.c.B32BA6DC5A3AABD7.idx  internal.h.C874C72C3A28ED66.idx  linux_joystick.c.DDF2E9640DE00D9C.idx  linux_joystick.h.5C3B8284A17F636A.idx  main.cpp.C8DB4D675A7F6444.idx  mappings.h.6E7FBC412A4D4DB3.idx  monitor.c.0C2CA3B2B7B72746.idx  null_init.c.E54A2FFD885A04CB.idx  null_joystick.c.7F6EEF4046B7A474.idx  null_joystick.h.2CA2A6D352094D4E.idx  null_monitor.c.FE9697888CB24954.idx  null_platform.h.C4860BD73BA59D42.idx  null_window.c.4D535258CA4DA0A4.idx  osmesa_context.c.860EAC7CCF469E47.idx  platform.c.85FED7145EC26905.idx  platform.h.489F4F710469960B.idx  posix_module.c.B449ED7CB73420FE.idx  posix_poll.c.CB0895163DAF9C41.idx  posix_poll.h.45B0EFFE307629C7.idx  posix_thread.c.C28DDC5B2F5E5E01.idx  posix_thread.h.4BF2A88EEE3E3568.idx  posix_time.c.3BF1D035289448A5.idx  posix_time.h.7A58F02923F8E642.idx  vulkan.c.DB34FADA971E4A82.idx  window.c.7CB80B1E544990A0.idx  wl_init.c.B84254FFC9930983.idx  wl_monitor.c.EA0B8489296A0ECA.idx  wl_platform.h.CCD84CDEAD150DCE.idx  wl_window.c.5B617A5C4F5EEE6C.idx  x11_init.c.D9C79BAC999493FE.idx  x11_monitor.c.3636577CF999417D.idx  x11_platform.h.517CCD10E42C4A59.idx  x11_window.c.52E54342E2AF4BE2.idx  (+2 more)
src/: main.cpp
